# codeplat

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  TODO.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
notes/: README.md  command-line-interface-guidelines.md  git-history-triage.md  rust-repository-navigation-building-blocks.md  token-budgeted-repository-maps.md
schema/v1/: codeplat.json
schema/v1/golden/: briefing.json  capabilities.json  doctor.json  history.json  map.json
src/: cli.rs  history.rs  landmarks.rs  lib.rs  main.rs  map.rs  report.rs  security.rs
src/map/: analysis.rs  cache.rs  graph.rs  languages.rs  parser.rs  repository.rs  tests.rs
src/queries/c_sharp/: definitions.scm  references.scm
src/queries/go/: definitions.scm  references.scm
src/queries/java/: definitions.scm  references.scm
src/queries/javascript/: definitions.scm  references.scm
src/queries/lua/: definitions.scm  references.scm
src/queries/python/: definitions.scm  references.scm
src/queries/ruby/: definitions.scm  references.scm
src/queries/rust/: definitions.scm  references.scm
src/queries/typescript/: definitions.scm  references.scm
src/report/: analysis.rs  core.rs  diagnostics.rs  history.rs  map_model.rs  model.rs  render.rs  tests.rs
src/utils/: mod.rs
tests/: cli.rs
xtask/: Cargo.toml
xtask/src/: main.rs
