[package]
name = "setaryb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.6.1", features = ["derive"] }
gix = "0.85.0"
ignore = "0.4.28"
owo-colors = "4.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2"
tree-sitter = "0.26.9"
tree-sitter-rust = "0.24.0"
