[workspace]
members = ["xtask"]
default-members = ["."]
resolver = "3"

[package]
name = "codeplat"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Read-only, evidence-backed repository orientation for people and coding agents"
license = "MIT"
repository = "https://github.com/stormlightlabs/codeplat"
readme = "README.md"
keywords = ["cli", "git", "repository", "code-analysis", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".sandbox/**"]

[dependencies]
anyhow = "1"
clap = { version = "4.6.2", features = ["derive"] }
gix = { version = "0.85.0", default-features = false, features = ["revision", "mailmap", "sha1"] }
ignore = "0.4.29"
libc = "0.2"
owo-colors = "4.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11"
thiserror = "2"
tree-sitter = "0.26.9"
tree-sitter-javascript = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-lua = "0.5.0"
tree-sitter-python = "0.25.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.0"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-go = "0.25.0"
tree-sitter-typescript = "0.23.2"
